--- a/app/src/main/res/layout/activity_all_forums.xml
+++ b/app/src/main/res/layout/activity_all_forums.xml
@@ -15,16 +15,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:background="@drawable/action_bar"
+            android:theme="@style/Theme.Toolbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,15 +33,15 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FORUM"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:fontFamily="@font/firasans"
+            android:text="FORUM"
             android:textColor="@android:color/white"
             android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="@id/toolBar"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/toolBar" />
 
         <EditText
             android:id="@+id/search_bar"
@@ -49,13 +50,13 @@
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:inputType="text"
             android:background="@drawable/background_search_bar"
-            android:padding="@dimen/activity_vertical_margin"
-            android:textCursorDrawable="@drawable/color_cursor"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="14sp"
             android:hint="Laptop Saya bermasalah"
+            android:inputType="text"
+            android:padding="@dimen/activity_vertical_margin"
+            android:textColor="@android:color/darker_gray"
+            android:textCursorDrawable="@drawable/color_cursor"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title" />
