--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -142,7 +142,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="8dp"
-            android:id="@+id/chipGroup" />
+            android:id="@+id/chipGroupTags" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
