--- a/app/src/main/res/layout/fragment_add_forum.xml
+++ b/app/src/main/res/layout/fragment_add_forum.xml
@@ -201,7 +201,7 @@
                 </TableRow>
 
                 <TableRow
-                    android:id="@+id/rowChip"
+                    android:id="@+id/rowChipTags"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
@@ -210,7 +210,40 @@
                     <com.google.android.material.chip.ChipGroup
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/chipGroup" />
+                        android:id="@+id/chipGroupTags" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_vertical_margin">
+
+                    <EditText
+                        android:id="@+id/forumHardware"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/rounded_edittext"
+                        android:ems="10"
+                        android:fontFamily="@font/firasans"
+                        android:hint="Hardware"
+                        android:inputType="text"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:textColor="@android:color/black"
+                        android:textCursorDrawable="@drawable/color_cursor"
+                        android:textSize="14sp" />
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/rowChipHardware"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_marginTop="@dimen/activity_vertical_margin">
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/chipGroupHardware" />
                 </TableRow>
 
             </TableLayout>
