--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -144,5 +144,27 @@
             android:layout_marginTop="8dp"
             android:id="@+id/chipGroupTags" />
 
+        <TextView
+            android:id="@+id/titleHardware"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hardware"
+            app:layout_constraintTop_toBottomOf="@id/chipGroupTags"
+            android:fontFamily="@font/firasans"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.chip.ChipGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/titleHardware"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="8dp"
+            android:id="@+id/chipGroupHardware" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
