--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,46 +15,46 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <View
+    <ImageView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginEnd="48dp"
+        android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/bottom_navigation"/>
 
     <ImageView
         android:id="@+id/home"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:padding="@dimen/activity_vertical_margin"
         app:layout_constraintStart_toStartOf="@id/bottomNavigationView"
         app:layout_constraintTop_toTopOf="@id/bottomNavigationView"
         app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
         android:layout_marginStart="32dp"
-        android:src="@drawable/ic_home_gray" />
+        android:src="@drawable/ic_home" />
 
     <ImageView
         android:id="@+id/addForum"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:padding="@dimen/activity_vertical_margin"
         app:layout_constraintEnd_toEndOf="@id/bottomNavigationView"
         app:layout_constraintStart_toStartOf="@id/bottomNavigationView"
         app:layout_constraintTop_toTopOf="@id/bottomNavigationView"
         app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
-        android:src="@drawable/ic_add_gray" />
+        android:src="@drawable/ic_add" />
 
     <ImageView
         android:id="@+id/profile"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:padding="@dimen/activity_vertical_margin"
         app:layout_constraintEnd_toEndOf="@id/bottomNavigationView"
         app:layout_constraintTop_toTopOf="@id/bottomNavigationView"
         app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
         android:layout_marginEnd="32dp"
-        android:src="@drawable/ic_profile_gray" />
+        android:src="@drawable/ic_profile" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
