--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,46 +15,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <ImageView
-        android:id="@+id/bottomNavigationView"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height=".7dp"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="@id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="@id/bottom_navigation"
+        android:background="@drawable/shadow_bottom_navigation"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        app:labelVisibilityMode="labeled"
+        android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/bottom_navigation"/>
-
-    <ImageView
-        android:id="@+id/home"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:padding="@dimen/activity_vertical_margin"
-        app:layout_constraintStart_toStartOf="@id/bottomNavigationView"
-        app:layout_constraintTop_toTopOf="@id/bottomNavigationView"
-        app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
-        android:layout_marginStart="32dp"
-        android:src="@drawable/ic_home" />
-
-    <ImageView
-        android:id="@+id/addForum"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:padding="@dimen/activity_vertical_margin"
-        app:layout_constraintEnd_toEndOf="@id/bottomNavigationView"
-        app:layout_constraintStart_toStartOf="@id/bottomNavigationView"
-        app:layout_constraintTop_toTopOf="@id/bottomNavigationView"
-        app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
-        android:src="@drawable/ic_add" />
-
-    <ImageView
-        android:id="@+id/profile"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:padding="@dimen/activity_vertical_margin"
-        app:layout_constraintEnd_toEndOf="@id/bottomNavigationView"
-        app:layout_constraintTop_toTopOf="@id/bottomNavigationView"
-        app:layout_constraintBottom_toBottomOf="@id/bottomNavigationView"
-        android:layout_marginEnd="32dp"
-        android:src="@drawable/ic_profile" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
