--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/toolBar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
@@ -33,9 +43,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/firasans"
+            android:text="DR"
             android:textColor="@android:color/white"
             android:textSize="18sp"
-            android:text="DR"
             app:layout_constraintBottom_toBottomOf="@id/userPic"
             app:layout_constraintEnd_toEndOf="@id/userPic"
             app:layout_constraintStart_toStartOf="@id/userPic"
@@ -45,14 +55,14 @@
             android:id="@+id/greeting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Selamat Datang"
-            app:layout_constraintTop_toTopOf="@id/userPic"
-            app:layout_constraintStart_toEndOf="@id/userPic"
-            android:fontFamily="@font/firasans"
             android:layout_marginStart="8dp"
-            android:textSize="14sp"
+            android:fontFamily="@font/firasans"
+            android:text="Selamat Datang"
             android:textColor="@android:color/white"
-            app:layout_constraintBottom_toTopOf="@id/userName" />
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@id/userName"
+            app:layout_constraintStart_toEndOf="@id/userPic"
+            app:layout_constraintTop_toTopOf="@id/userPic" />
 
         <TextView
             android:id="@+id/userName"
@@ -60,8 +70,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/firasans"
-            android:textColor="@android:color/white"
             android:text="Loading..."
+            android:textColor="@android:color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@id/userPic"
             app:layout_constraintStart_toEndOf="@id/userPic"
@@ -71,11 +81,11 @@
             android:id="@+id/notifications"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_notifications_white"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:src="@drawable/ic_notifications_white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/search_bar"
@@ -96,14 +106,14 @@
             android:id="@+id/textSearching"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/search_bar"
-            app:layout_constraintStart_toStartOf="@id/search_bar"
-            app:layout_constraintBottom_toBottomOf="@id/search_bar"
-            android:text="Searching"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:fontFamily="@font/firasans"
+            android:text="Searching"
             android:textColor="@android:color/darker_gray"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/search_bar"
+            app:layout_constraintStart_toStartOf="@id/search_bar"
+            app:layout_constraintTop_toTopOf="@id/search_bar" />
 
         <com.synnapps.carouselview.CarouselView
             android:id="@+id/carouselView"
@@ -111,6 +121,7 @@
             android:layout_height="120dp"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:visibility="gone"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             app:fillColor="#FFFFFFFF"
             app:layout_constraintBottom_toTopOf="@id/allForums"
@@ -130,6 +141,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@drawable/background_forum_specialist"
             android:orientation="vertical"
+            android:visibility="gone"
             android:padding="@dimen/activity_vertical_margin"
             app:layout_constraintEnd_toStartOf="@id/allSpecialists"
             app:layout_constraintStart_toStartOf="@id/carouselView"
@@ -160,6 +172,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@drawable/background_forum_specialist"
             android:orientation="vertical"
+            android:visibility="gone"
             android:padding="@dimen/activity_vertical_margin"
             app:layout_constraintEnd_toEndOf="@id/carouselView"
             app:layout_constraintStart_toEndOf="@id/allForums"
@@ -190,6 +203,7 @@
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:fontFamily="@font/firasans"
+            android:visibility="gone"
             android:text="Forum (Top 5)"
             android:textColor="@android:color/black"
             android:textSize="16sp"
@@ -201,6 +215,7 @@
             android:id="@+id/forumRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             app:layout_constraintEnd_toEndOf="parent"
@@ -213,6 +228,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:visibility="gone"
             android:fontFamily="@font/firasans"
             android:text="Specialist (Top 5)"
             android:textColor="@android:color/black"
@@ -226,6 +242,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:visibility="gone"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             app:layout_constraintEnd_toEndOf="parent"
