Major Re-Design

--- a/app/src/main/res/drawable/ic_forum.xml
+++ b/app/src/main/res/drawable/ic_forum.xml
@@ -1,33 +1,84 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="512dp"
     android:height="512dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="128"
+    android:viewportHeight="128">
   <path
-      android:pathData="m4.5,6.25v-4.5c0,-0.26 0.03,-0.51 0.1,-0.75h-2.85c-0.96,0 -1.75,0.79 -1.75,1.75v4.5c0,0.96 0.79,1.75 1.75,1.75h0.37l1.28,1.7c0.14,0.18 0.35,0.29 0.57,0.3h0.03c0.22,0 0.42,-0.09 0.56,-0.26l1.5,-1.71c-0.93,-0.58 -1.56,-1.61 -1.56,-2.78z"
-      android:fillColor="#ffc107"/>
+      android:pathData="M42.398,10L89.601,10A8.036,8.036 0,0 1,97.637 18.036L97.637,113.964A8.036,8.036 0,0 1,89.601 122L42.398,122A8.036,8.036 0,0 1,34.362 113.964L34.362,18.036A8.036,8.036 0,0 1,42.398 10z"
+      android:fillColor="#e6e7e8"/>
   <path
-      android:pathData="m22.25,1h-2.85c0.07,0.24 0.1,0.49 0.1,0.75v4.5c0,1.17 -0.63,2.2 -1.56,2.78l1.5,1.71c0.14,0.17 0.34,0.26 0.56,0.26h0.03c0.22,-0.01 0.43,-0.12 0.57,-0.3l1.27,-1.7h0.38c0.96,0 1.75,-0.79 1.75,-1.75v-4.5c0,-0.96 -0.79,-1.75 -1.75,-1.75z"
-      android:fillColor="#ffc107"/>
+      android:pathData="M38.397,7L85.602,7A7.035,7.035 0,0 1,92.637 14.035L92.637,109.965A7.035,7.035 0,0 1,85.602 117L38.397,117A7.035,7.035 0,0 1,31.362 109.965L31.362,14.035A7.035,7.035 0,0 1,38.397 7z"
+      android:fillColor="#6dc9f7"/>
   <path
-      android:pathData="m12,10c-0.009,0 -0.019,0 -0.028,0 -0.226,-0.009 -0.436,-0.119 -0.572,-0.3l-1.275,-1.7h-2.375c-0.965,0 -1.75,-0.785 -1.75,-1.75v-4.5c0,-0.965 0.785,-1.75 1.75,-1.75h8.5c0.965,0 1.75,0.785 1.75,1.75v4.5c0,0.965 -0.785,1.75 -1.75,1.75h-2.16l-1.526,1.744c-0.142,0.163 -0.348,0.256 -0.564,0.256z"
-      android:fillColor="#03a9f4"/>
+      android:pathData="m31.362,17.429h61.275v84.657h-61.275z"
+      android:fillColor="#d4fbff"/>
   <path
-      android:pathData="M4,15m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
-      android:fillColor="#4caf50"/>
+      android:pathData="m31.362,17.429h61.275v3h-61.275z"
+      android:fillColor="#fff"/>
   <path
-      android:pathData="m6.67,18.4c-1.01,0.76 -1.67,1.98 -1.67,3.35v0.25h-4.25c-0.41,0 -0.75,-0.34 -0.75,-0.75v-0.5c0,-1.52 1.23,-2.75 2.75,-2.75h2.5c0.52,0 1.01,0.15 1.42,0.4z"
-      android:fillColor="#4caf50"/>
+      android:pathData="M53.462,11.186L70.538,11.186A1.026,1.026 0,0 1,71.564 12.212L71.564,12.429A1.026,1.026 0,0 1,70.538 13.455L53.462,13.455A1.026,1.026 0,0 1,52.436 12.429L52.436,12.212A1.026,1.026 0,0 1,53.462 11.186z"
+      android:fillColor="#0089ef"/>
   <path
-      android:pathData="M20,15m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
-      android:fillColor="#4caf50"/>
+      android:pathData="m76.1,11.075a1.246,1.246 0,1 0,1.245 1.246,1.245 1.245,0 0,0 -1.245,-1.246z"
+      android:fillColor="#0089ef"/>
   <path
-      android:pathData="m24,20.75v0.5c0,0.41 -0.34,0.75 -0.75,0.75h-4.25v-0.25c0,-1.37 -0.66,-2.59 -1.67,-3.35 0.41,-0.25 0.9,-0.4 1.42,-0.4h2.5c1.52,0 2.75,1.23 2.75,2.75z"
-      android:fillColor="#4caf50"/>
+      android:pathData="M56.225,106.153L67.775,106.153A2.492,2.492 0,0 1,70.267 108.645L70.267,109.173A2.492,2.492 0,0 1,67.775 111.665L56.225,111.665A2.492,2.492 0,0 1,53.733 109.173L53.733,108.645A2.492,2.492 0,0 1,56.225 106.153z"
+      android:fillColor="#0089ef"/>
   <path
-      android:pathData="M12,14.5m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
-      android:fillColor="#2196f3"/>
+      android:pathData="m55.12,45.854v0.039a2.3,2.3 0,0 1,-3.21 2.107l-12.944,-5.61a3.3,3.3 0,0 1,-1.986 -3.025v-0.035a3.294,3.294 0,0 1,1.986 -3.024l12.944,-5.606a2.3,2.3 0,0 1,3.21 2.1v0.063a2.3,2.3 0,0 1,-1.471 2.143l-11.169,4.3 11.185,4.4a2.3,2.3 0,0 1,1.455 2.148z"
+      android:fillColor="#fa759e"/>
   <path
-      android:pathData="m14.75,19h-5.5c-1.517,0 -2.75,1.233 -2.75,2.75v1.5c0,0.414 0.336,0.75 0.75,0.75h9.5c0.414,0 0.75,-0.336 0.75,-0.75v-1.5c0,-1.517 -1.233,-2.75 -2.75,-2.75z"
-      android:fillColor="#2196f3"/>
+      android:pathData="m65.348,25.515a2.135,2.135 0,0 0,-2.577 1.573l-5.692,23.519a2.134,2.134 0,1 0,4.149 1l5.692,-23.516a2.136,2.136 0,0 0,-1.572 -2.576z"
+      android:fillColor="#fa759e"/>
+  <path
+      android:pathData="m85.039,42.345 l-12.946,5.637a2.3,2.3 0,0 1,-3.214 -2.106v-0.032a2.3,2.3 0,0 1,1.458 -2.138l11.219,-4.406 -11.209,-4.336a2.3,2.3 0,0 1,-1.468 -2.142,2.3 2.3,0 0,1 3.207,-2.109l12.943,5.587a3.3,3.3 0,0 1,1.99 3.027,3.3 3.3,0 0,1 -1.98,3.018z"
+      android:fillColor="#fa759e"/>
+  <path
+      android:pathData="m67.82,60h-6.808a1,1 0,0 1,0 -2h6.808a1,1 0,0 1,0 2z"
+      android:fillColor="#fa759e"/>
+  <path
+      android:pathData="m55.012,60h-16.833a1,1 0,0 1,0 -2h16.833a1,1 0,0 1,0 2z"
+      android:fillColor="#fa759e"/>
+  <path
+      android:pathData="m31.362,54.414a1,1 0,0 0,1 -1v-8.081a1,1 0,0 0,-2 0v8.081a1,1 0,0 0,1 1z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m85.6,6h-47.2a8.045,8.045 0,0 0,-8.036 8.036v26.464a1,1 0,0 0,2 0v-22.071h59.274v82.657h-59.276v-42.836a1,1 0,0 0,-2 0v51.714a8.045,8.045 0,0 0,8.038 8.036h47.2a8.046,8.046 0,0 0,8.036 -8.036v-95.928a8.046,8.046 0,0 0,-8.036 -8.036zM32.362,16.429v-2.393a6.043,6.043 0,0 1,6.038 -6.036h47.2a6.043,6.043 0,0 1,6.036 6.036v2.393zM85.6,116h-47.2a6.043,6.043 0,0 1,-6.036 -6.036v-6.878h59.274v6.878a6.043,6.043 0,0 1,-6.038 6.036z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m56.12,32.8a3.3,3.3 0,0 0,-4.608 -3.025l-12.944,5.61a4.324,4.324 0,0 0,0 7.92l12.944,5.609a3.3,3.3 0,0 0,4.608 -3.025v-0.039a3.277,3.277 0,0 0,-2.09 -3.068l-8.8,-3.463 8.773,-3.38a3.336,3.336 0,0 0,2.117 -3.139zM53.289,34.073 L42.121,38.373a1,1 0,0 0,-0.007 1.864l11.184,4.4a1.288,1.288 0,0 1,0.822 1.207v0.039a1.3,1.3 0,0 1,-1.813 1.19l-12.944,-5.599a2.325,2.325 0,0 1,0 -4.25l12.944,-5.61a1.313,1.313 0,0 1,0.52 -0.11,1.287 1.287,0 0,1 0.708,0.216 1.348,1.348 0,0 1,-0.246 2.357z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m65.585,24.543a3.135,3.135 0,0 0,-3.785 2.31l-5.693,23.518a3.138,3.138 0,0 0,2.311 3.785,3.172 3.172,0 0,0 0.737,0.087 3.124,3.124 0,0 0,3.045 -2.4l5.692,-23.519a3.136,3.136 0,0 0,-2.307 -3.784zM65.948,27.856 L60.257,51.375a1.151,1.151 0,0 1,-1.37 0.836,1.136 1.136,0 0,1 -0.836,-1.369l5.692,-23.519a1.13,1.13 0,0 1,0.514 -0.7,1.119 1.119,0 0,1 0.586,-0.166 1.1,1.1 0,0 1,0.267 0.033,1.135 1.135,0 0,1 0.836,1.369z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m88.02,39.323a4.293,4.293 0,0 0,-2.595 -3.945l-12.943,-5.578a3.3,3.3 0,1 0,-2.5 6.1l8.818,3.408 -8.83,3.467a3.312,3.312 0,1 0,2.523 6.125l12.946,-5.637a4.3,4.3 0,0 0,2.581 -3.94zM84.64,41.423 L71.694,47.065a1.272,1.272 0,0 1,-1.229 -0.1,1.323 1.323,0 0,1 0.237,-2.324l11.219,-4.405a1,1 0,0 0,-0.005 -1.863l-11.207,-4.341a1.308,1.308 0,0 1,-0.83 -1.21,1.3 1.3,0 0,1 1.293,-1.3 1.3,1.3 0,0 1,0.518 0.109l12.942,5.584a2.3,2.3 0,0 1,0.008 4.213z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m85.82,65h-11.309a1,1 0,0 0,0 2h11.309a1,1 0,0 0,0 -2z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m45.179,67h24.166a1,1 0,0 0,0 -2h-24.166a1,1 0,0 0,0 2z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m85.82,72h-22.22a1,1 0,1 0,0 2h22.22a1,1 0,0 0,0 -2z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m45.179,74h12.333a1,1 0,0 0,0 -2h-12.333a1,1 0,0 0,0 2z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m85.82,79h-40.641a1,1 0,0 0,0 2h40.641a1,1 0,0 0,0 -2z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m85.82,86h-7.875a1,1 0,0 0,0 2h7.875a1,1 0,0 0,0 -2z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m45.179,86a1,1 0,0 0,0 2h27.75a1,1 0,0 0,0 -2z"
+      android:fillColor="#3a2c60"/>
+  <path
+      android:pathData="m67.82,95h-10.308a1,1 0,0 1,0 -2h10.308a1,1 0,0 1,0 2z"
+      android:fillColor="#fa759e"/>
+  <path
+      android:pathData="m53.512,95h-15.333a1,1 0,0 1,0 -2h15.333a1,1 0,0 1,0 2z"
+      android:fillColor="#fa759e"/>
 </vector>
