--- a/app/src/main/res/drawable/progress_color.xml
+++ b/app/src/main/res/drawable/progress_color.xml
@@ -4,7 +4,7 @@
         <shape>
             <corners android:radius="5dip" />
             <gradient
-                android:startColor="@color/twitterColour"
+                android:startColor="@color/purpleDark"
                 android:endColor="@android:color/white"
                 android:centerY="0.75"
                 android:angle="270"
@@ -19,7 +19,7 @@
                 <gradient
                     android:centerColor="#80ffb600"
                     android:centerY="0.75"
-                    android:startColor="@color/twitterColour"
+                    android:startColor="@color/purpleDark"
                     android:endColor="@android:color/white"
                     android:angle="270"
                     />
@@ -33,7 +33,7 @@
                 <corners
                     android:radius="5dip" />
                 <gradient
-                    android:startColor="@color/twitterColour"
+                    android:startColor="@color/purpleDark"
                     android:endColor="@android:color/white"
                     android:angle="270"
                     />
