--- a/app/src/main/res/drawable/background_add_button_blue.xml
+++ b/app/src/main/res/drawable/background_add_button_blue.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/twitterColour" />
+    <solid android:color="@color/purpleDark" />
 
 </shape>
