--- a/app/src/main/res/drawable/background_add_button_white.xml
+++ b/app/src/main/res/drawable/background_add_button_white.xml
@@ -4,6 +4,6 @@
 
     <solid android:color="@android:color/white" />
 
-    <stroke android:color="@color/twitterColour" android:width="1dp" />
+    <stroke android:color="@color/purpleDark" android:width="1dp" />
 
 </shape>
