--- a/app/src/main/res/drawable/background_button_submit.xml
+++ b/app/src/main/res/drawable/background_button_submit.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/twitterColour">
+    android:color="@color/purpleDark">
 
     <item>
         <shape>
@@ -9,7 +9,7 @@
 
             <stroke
                 android:width="1dp"
-                android:color="@color/twitterColour" />
+                android:color="@color/purpleDark" />
 
             <corners android:radius="15dp" />
 
