--- a/app/src/main/res/drawable/background_category_views.xml
+++ b/app/src/main/res/drawable/background_category_views.xml
@@ -3,8 +3,6 @@
     android:shape="rectangle">
 
     <solid android:color="@color/purpleDark" />
-
-    <corners android:bottomLeftRadius="30dp"
-        android:bottomRightRadius="30dp" />
+    <corners android:radius="50dp" />
 
 </shape>
