--- a/app/src/main/res/drawable/background_title.xml
+++ b/app/src/main/res/drawable/background_title.xml
@@ -2,9 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/purpleDark" />
-
-    <corners android:bottomLeftRadius="30dp"
-        android:bottomRightRadius="30dp" />
+    <solid android:color="#80000000" />
 
 </shape>
