--- a/app/src/main/res/drawable/oval_tags.xml
+++ b/app/src/main/res/drawable/oval_tags.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/twitterColour" />
+    <solid android:color="@color/purpleDark" />
     <padding
         android:bottom="32dp"
         android:left="32dp"
