--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/twitterColour" />
+        android:color="@color/purpleDark" />
     <corners
         android:radius="10dp"
         />
