--- a/app/src/main/res/drawable/total_background.xml
+++ b/app/src/main/res/drawable/total_background.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="#b5b5b5"/>
             <corners android:radius="10dp" />
         </shape>
     </item>
 
     <item
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp"
-        android:bottom="0dp">
-        <shape android:shape="oval">
-            <solid android:color="@color/purpleDark"/>
+        android:left="1dp"
+        android:right="1dp"
+        android:top="1dp"
+        android:bottom="2dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white"/>
             <corners android:radius="10dp" />
-            <stroke android:color="@android:color/white" android:width="5dp" />
         </shape>
     </item>
 </layer-list>
