--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:text="Email"
             android:fontFamily="@font/firasans"
-            android:textColor="@color/twitterColour"
+            android:textColor="@color/purpleDark"
             android:textSize="12sp" />
 
 
@@ -72,7 +72,7 @@
             android:textSize="16sp"
             android:paddingStart="8dp"
             android:paddingEnd="@dimen/activity_horizontal_margin"
-            android:drawableEnd="@drawable/ic_person_blue"
+            android:drawableEnd="@drawable/ic_person_purple_dark"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
