--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:text="Email"
                 android:fontFamily="@font/firasans"
-                android:textColor="@color/twitterColour"
+                android:textColor="@color/purpleDark"
                 android:textSize="12sp" />
 
 
@@ -75,8 +75,8 @@
                 android:textSize="16sp"
                 android:paddingStart="8dp"
                 android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:backgroundTint="@color/twitterColour"
-                android:drawableEnd="@drawable/ic_person_blue"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_person_purple_dark"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:text="Password"
                 android:fontFamily="@font/firasans"
-                android:textColor="@color/twitterColour"
+                android:textColor="@color/purpleDark"
                 android:textSize="12sp" />
 
 
@@ -99,14 +99,14 @@
                 android:paddingStart="8dp"
                 android:paddingEnd="@dimen/activity_horizontal_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/twitterColour"
-                android:drawableEnd="@drawable/ic_lock_blue"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_lock_purple_dark"
                 android:textSize="16sp" />
         </LinearLayout>
 
-        <Button
+        <View
             android:id="@+id/btnLogin"
-            android:layout_width="150dp"
+            android:layout_width="60dp"
             android:layout_height="60dp"
             app:layout_constraintTop_toBottomOf="@id/linear1"
             app:layout_constraintStart_toStartOf="@id/linear1"
@@ -114,8 +114,16 @@
             app:layout_constraintBottom_toBottomOf="@id/linear1"
             android:background="@drawable/background_button_login_register"
             android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:text="Login" />
+            android:textSize="16sp" />
+        
+        <View
+            android:layout_width="16dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_arrow_white"
+            app:layout_constraintStart_toStartOf="@id/btnLogin"
+            app:layout_constraintEnd_toEndOf="@id/btnLogin"
+            app:layout_constraintTop_toTopOf="@id/btnLogin"
+            app:layout_constraintBottom_toBottomOf="@id/btnLogin" />
 
         <TextView
             android:id="@+id/forgotPass"
@@ -125,7 +133,7 @@
             app:layout_constraintTop_toBottomOf="@id/btnLogin"
             app:layout_constraintEnd_toEndOf="@id/btnLogin"
             android:text="Lupa Password ?"
-            android:textColor="@color/twitterColour"
+            android:textColor="@color/purpleDark"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:textSize="16sp"
             android:textStyle="italic" />
@@ -135,7 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/toolBar"
-            android:backgroundTint="@color/twitterColour"
+            android:backgroundTint="@color/purpleDark"
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
