--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/firasans"
                 android:text="Nama"
-                android:textColor="@color/twitterColour"
+                android:textColor="@color/purpleDark"
                 android:textSize="12sp" />
 
 
@@ -71,8 +71,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/twitterColour"
-                android:drawableEnd="@drawable/ic_person_blue"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_person_purple_dark"
                 android:fontFamily="@font/firasans"
                 android:inputType="textEmailAddress"
                 android:paddingStart="8dp"
@@ -86,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/firasans"
                 android:text="Email"
-                android:textColor="@color/twitterColour"
+                android:textColor="@color/purpleDark"
                 android:textSize="12sp" />
 
 
@@ -95,8 +95,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/twitterColour"
-                android:drawableEnd="@drawable/ic_email_blue"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_email_purple_dark"
                 android:fontFamily="@font/firasans"
                 android:inputType="textEmailAddress"
                 android:paddingStart="8dp"
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/firasans"
                 android:text="Password"
-                android:textColor="@color/twitterColour"
+                android:textColor="@color/purpleDark"
                 android:textSize="12sp" />
 
 
@@ -119,8 +119,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/twitterColour"
-                android:drawableEnd="@drawable/ic_lock_blue"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_lock_purple_dark"
                 android:fontFamily="@font/firasans"
                 android:inputType="textPassword"
                 android:paddingStart="8dp"
@@ -134,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/firasans"
                 android:text="Re-Type"
-                android:textColor="@color/twitterColour"
+                android:textColor="@color/purpleDark"
                 android:textSize="12sp" />
 
 
@@ -142,8 +142,8 @@
                 android:id="@+id/reTypePass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/twitterColour"
-                android:drawableEnd="@drawable/ic_lock_blue"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_lock_purple_dark"
                 android:fontFamily="@font/firasans"
                 android:inputType="textPassword"
                 android:paddingStart="8dp"
@@ -153,18 +153,39 @@
                 android:textSize="16sp" />
         </LinearLayout>
 
-        <Button
+        <View
             android:id="@+id/btnRegister"
-            android:layout_width="150dp"
+            android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@drawable/background_button_login_register"
-            android:text="Daftar"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@id/linear1"
-            app:layout_constraintEnd_toEndOf="@id/linear1"
+            app:layout_constraintTop_toBottomOf="@id/linear1"
             app:layout_constraintStart_toStartOf="@id/linear1"
-            app:layout_constraintTop_toBottomOf="@id/linear1" />
+            app:layout_constraintEnd_toEndOf="@id/linear1"
+            app:layout_constraintBottom_toBottomOf="@id/linear1"
+            android:background="@drawable/background_button_login_register"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="16dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_arrow_white"
+            app:layout_constraintStart_toStartOf="@id/btnRegister"
+            app:layout_constraintEnd_toEndOf="@id/btnRegister"
+            app:layout_constraintTop_toTopOf="@id/btnRegister"
+            app:layout_constraintBottom_toBottomOf="@id/btnRegister" />
+
+        <TextView
+            android:id="@+id/forgotPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/btnRegister"
+            app:layout_constraintTop_toBottomOf="@id/btnRegister"
+            app:layout_constraintEnd_toEndOf="@id/btnRegister"
+            android:text="Lupa Password ?"
+            android:textColor="@color/purpleDark"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:textSize="16sp"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/haveAccount"
@@ -172,7 +193,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="Sudah Punya Akun ?"
-            android:textColor="@color/twitterColour"
+            android:textColor="@color/purpleDark"
             android:textSize="16sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="@id/btnRegister"
