--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -88,7 +88,7 @@
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/firasans"
                 android:text="Forum"
-                android:textColor="@color/twitterColour"
+                android:textColor="@color/purpleDark"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -119,7 +119,7 @@
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/firasans"
                 android:text="Specialist"
-                android:textColor="@color/twitterColour"
+                android:textColor="@color/purpleDark"
                 android:textSize="14sp" />
 
         </LinearLayout>
