--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,13 +12,13 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_width="wrap_content"
-            android:visibility="gone"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/total" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
@@ -33,7 +33,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginTop="20dp"
             android:background="@drawable/background_pic_user"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -77,123 +77,162 @@
             app:layout_constraintStart_toEndOf="@id/userPic"
             app:layout_constraintTop_toBottomOf="@id/greeting" />
 
+        <View
+            android:id="@+id/total"
+            android:layout_width="match_parent"
+            android:layout_height="143dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginEnd="48dp"
+            android:background="@drawable/total_background"
+            app:layout_constraintBottom_toBottomOf="@id/toolBar"
+            app:layout_constraintTop_toBottomOf="@id/toolBar" />
+
         <ImageView
-            android:id="@+id/notifications"
+            android:id="@+id/pic_forum"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:src="@drawable/ic_notifications_white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:id="@+id/search_bar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:background="@drawable/background_search_bar"
-            android:padding="@dimen/activity_vertical_margin"
-            android:textCursorDrawable="@drawable/color_cursor"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/userPic" />
+            android:src="@drawable/ic_forum"
+            app:layout_constraintBottom_toTopOf="@id/pic_specialist"
+            app:layout_constraintStart_toStartOf="@id/total"
+            app:layout_constraintTop_toTopOf="@id/total" />
 
         <TextView
-            android:id="@+id/textSearching"
+            android:id="@+id/totalForums"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:fontFamily="@font/firasans"
-            android:text="Searching"
-            android:textColor="@android:color/darker_gray"
+            android:text="Loading..."
+            android:textColor="@android:color/black"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/search_bar"
-            app:layout_constraintStart_toStartOf="@id/search_bar"
-            app:layout_constraintTop_toTopOf="@id/search_bar" />
+            app:layout_constraintBottom_toBottomOf="@id/pic_forum"
+            app:layout_constraintStart_toEndOf="@id/pic_forum"
+            app:layout_constraintTop_toTopOf="@id/pic_forum" />
 
-        <com.synnapps.carouselview.CarouselView
-            android:id="@+id/carouselView"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
+        <ImageView
+            android:id="@+id/pic_specialist"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:visibility="gone"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            app:fillColor="#FFFFFFFF"
-            app:layout_constraintBottom_toTopOf="@id/allForums"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"
-            app:pageColor="#00000000"
-            app:radius="3dp"
-            app:slideInterval="3000"
-            app:strokeColor="#FF777777"
-            app:strokeWidth="1dp" />
+            android:src="@drawable/ic_dr_tech"
+            app:layout_constraintBottom_toTopOf="@id/pic_tag"
+            app:layout_constraintStart_toStartOf="@id/total"
+            app:layout_constraintTop_toBottomOf="@id/pic_forum" />
+
+        <TextView
+            android:id="@+id/totalSpecialists"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:fontFamily="@font/firasans"
+            android:text="Loading..."
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/pic_specialist"
+            app:layout_constraintStart_toEndOf="@id/pic_specialist"
+            app:layout_constraintTop_toTopOf="@id/pic_specialist" />
+
+        <ImageView
+            android:id="@+id/pic_tag"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:src="@drawable/ic_tags"
+            app:layout_constraintBottom_toBottomOf="@id/total"
+            app:layout_constraintStart_toStartOf="@id/total"
+            app:layout_constraintTop_toBottomOf="@id/pic_specialist" />
+
+        <TextView
+            android:id="@+id/totalTags"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:fontFamily="@font/firasans"
+            android:text="Loading..."
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/pic_tag"
+            app:layout_constraintStart_toEndOf="@id/pic_tag"
+            app:layout_constraintTop_toTopOf="@id/pic_tag" />
+
+        <ImageView
+            android:layout_width="144dp"
+            android:layout_height="128dp"
+            android:src="@drawable/ic_dr_tech"
+            app:layout_constraintBottom_toBottomOf="@id/total"
+            app:layout_constraintEnd_toEndOf="@id/total"
+            app:layout_constraintTop_toTopOf="@id/total" />
 
         <LinearLayout
-            android:id="@+id/allForums"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="@drawable/background_forum_specialist"
-            android:orientation="vertical"
+            android:id="@+id/forum"
+            android:layout_width="145dp"
+            android:layout_height="56dp"
+            android:layout_marginEnd="12dp"
             android:visibility="gone"
-            android:padding="@dimen/activity_vertical_margin"
-            app:layout_constraintEnd_toStartOf="@id/allSpecialists"
-            app:layout_constraintStart_toStartOf="@id/carouselView"
-            app:layout_constraintTop_toBottomOf="@id/carouselView">
+            app:layout_constraintStart_toStartOf="@id/total"
+            app:layout_constraintTop_toBottomOf="@id/total"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@drawable/background_main_feature"
+            android:gravity="center">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_forum" />
-
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/firasans"
-                android:text="Forum"
-                android:textColor="@color/twitterColour"
-                android:textSize="14sp" />
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:src="@drawable/ic_forum" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="8dp"
+                    android:fontFamily="@font/firasans"
+                    android:text="Forum"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/allSpecialists"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/specialist"
+            android:layout_width="145dp"
+            android:layout_height="56dp"
+            android:layout_gravity="end"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="@drawable/background_forum_specialist"
-            android:orientation="vertical"
             android:visibility="gone"
-            android:padding="@dimen/activity_vertical_margin"
-            app:layout_constraintEnd_toEndOf="@id/carouselView"
-            app:layout_constraintStart_toEndOf="@id/allForums"
-            app:layout_constraintTop_toBottomOf="@id/carouselView">
+            app:layout_constraintEnd_toEndOf="@id/total"
+            app:layout_constraintTop_toBottomOf="@id/total"
+            android:layout_marginStart="12dp"
+            android:background="@drawable/background_main_feature"
+            android:gravity="center">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_technician" />
-
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/firasans"
-                android:text="Specialist"
-                android:textColor="@color/twitterColour"
-                android:textSize="14sp" />
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:src="@drawable/ic_dr_tech" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="8dp"
+                    android:fontFamily="@font/firasans"
+                    android:text="Specialist"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp" />
+            </LinearLayout>
         </LinearLayout>
 
         <TextView
@@ -203,21 +242,21 @@
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:fontFamily="@font/firasans"
-            android:visibility="gone"
-            android:text="Forum (Top 5)"
+            android:text="Forum Terbaik"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/allForums" />
+            app:layout_constraintTop_toBottomOf="@id/forum" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/forumRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleForum" />
@@ -228,12 +267,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:visibility="gone"
             android:fontFamily="@font/firasans"
-            android:text="Specialist (Top 5)"
+            android:text="Specialist Terbaik"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/forumRecyclerView" />
 
@@ -242,9 +281,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:visibility="gone"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleSpecialist" />
