--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,5 +5,5 @@
     android:padding="5dp"
     android:fontFamily="@font/firasans"
     android:layout_weight="1.0"
-    android:textColor="@color/twitterColour"
+    android:textColor="@color/purpleDark"
     android:textSize="16sp" />
