--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/twitterColour</item>
+        <item name="colorPrimaryDark">@color/purpleDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
