--- a/app/src/main/res/layout/fragment_add_forum.xml
+++ b/app/src/main/res/layout/fragment_add_forum.xml
@@ -191,6 +191,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/rounded_edittext"
                         android:ems="10"
+                        android:maxLength="8"
                         android:fontFamily="@font/firasans"
                         android:hint="Tag (optional)"
                         android:inputType="text"
@@ -224,6 +225,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/rounded_edittext"
                         android:ems="10"
+                        android:maxLength="8"
                         android:fontFamily="@font/firasans"
                         android:hint="Hardware"
                         android:inputType="text"
