--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,62 +5,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.Login">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
+            android:layout_height="150dp"
             android:background="@drawable/action_bar"
-            android:layout_height="150dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            app:layout_constraintTop_toTopOf="@id/toolBar"
-            app:layout_constraintStart_toStartOf="@id/toolBar"
-            app:layout_constraintEnd_toEndOf="@id/toolBar"
-            app:layout_constraintBottom_toBottomOf="@id/toolBar"
-            android:text="L O G I N"
             android:fontFamily="@font/nexabold"
+            android:text="L O G I N"
             android:textColor="@android:color/white"
-            android:textSize="26sp" />
+            android:textSize="26sp"
+            app:layout_constraintBottom_toBottomOf="@id/toolBar"
+            app:layout_constraintEnd_toEndOf="@id/toolBar"
+            app:layout_constraintStart_toStartOf="@id/toolBar"
+            app:layout_constraintTop_toTopOf="@id/toolBar" />
 
         <View
             android:layout_width="400dp"
             android:layout_height="400dp"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/gray_circle"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/gray_circle" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar" />
 
         <LinearLayout
             android:id="@+id/linear1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
             android:layout_marginTop="50dp"
+            android:layout_marginEnd="32dp"
             android:background="@drawable/background_button_submit"
+            android:orientation="vertical"
             android:paddingStart="24dp"
-            android:paddingEnd="24dp"
             android:paddingTop="24dp"
+            android:paddingEnd="24dp"
             android:paddingBottom="50dp"
-            android:orientation="vertical">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
                 android:fontFamily="@font/firasans"
+                android:text="Email"
                 android:textColor="@color/purpleDark"
                 android:textSize="12sp" />
 
@@ -69,22 +70,22 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/firasans"
-                android:inputType="textEmailAddress"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:paddingStart="8dp"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:backgroundTint="@color/purpleDark"
                 android:drawableEnd="@drawable/ic_person_purple_dark"
+                android:fontFamily="@font/firasans"
+                android:inputType="textEmailAddress"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin" />
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Password"
                 android:fontFamily="@font/firasans"
+                android:text="Password"
                 android:textColor="@color/purpleDark"
                 android:textSize="12sp" />
 
@@ -93,14 +94,14 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/purpleDark"
+                android:drawableEnd="@drawable/ic_lock_purple_dark"
                 android:fontFamily="@font/firasans"
                 android:inputType="textPassword"
-                android:textColor="@android:color/black"
                 android:paddingStart="8dp"
                 android:paddingEnd="@dimen/activity_horizontal_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/purpleDark"
-                android:drawableEnd="@drawable/ic_lock_purple_dark"
+                android:textColor="@android:color/black"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -108,46 +109,46 @@
             android:id="@+id/btnLogin"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:layout_constraintTop_toBottomOf="@id/linear1"
-            app:layout_constraintStart_toStartOf="@id/linear1"
-            app:layout_constraintEnd_toEndOf="@id/linear1"
-            app:layout_constraintBottom_toBottomOf="@id/linear1"
             android:background="@drawable/background_button_login_register"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
-        
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/linear1"
+            app:layout_constraintEnd_toEndOf="@id/linear1"
+            app:layout_constraintStart_toStartOf="@id/linear1"
+            app:layout_constraintTop_toBottomOf="@id/linear1" />
+
         <View
             android:layout_width="16dp"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_arrow_white"
-            app:layout_constraintStart_toStartOf="@id/btnLogin"
+            app:layout_constraintBottom_toBottomOf="@id/btnLogin"
             app:layout_constraintEnd_toEndOf="@id/btnLogin"
-            app:layout_constraintTop_toTopOf="@id/btnLogin"
-            app:layout_constraintBottom_toBottomOf="@id/btnLogin" />
+            app:layout_constraintStart_toStartOf="@id/btnLogin"
+            app:layout_constraintTop_toTopOf="@id/btnLogin" />
 
         <TextView
             android:id="@+id/forgotPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/btnLogin"
-            app:layout_constraintTop_toBottomOf="@id/btnLogin"
-            app:layout_constraintEnd_toEndOf="@id/btnLogin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="Lupa Password ?"
             android:textColor="@color/purpleDark"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:textSize="16sp"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="@id/btnLogin"
+            app:layout_constraintStart_toStartOf="@id/btnLogin"
+            app:layout_constraintTop_toBottomOf="@id/btnLogin" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"
-            android:backgroundTint="@color/purpleDark"
             android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:src="@drawable/ic_add_white" />
+            android:backgroundTint="@color/purpleDark"
+            android:src="@drawable/ic_add_white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
