--- a/app/src/main/res/layout/forum_list.xml
+++ b/app/src/main/res/layout/forum_list.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     app:cardCornerRadius="10dp">
@@ -16,15 +18,16 @@
 
         <ImageView
             android:id="@+id/forum_pic"
-            android:layout_width="180dp"
+            android:layout_width="match_parent"
             android:layout_height="195dp"
             android:src="@drawable/computer"
             app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/forum_title"
-            android:layout_width="180dp"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/background_title"
             android:fontFamily="@font/firasans"
@@ -34,6 +37,7 @@
             android:paddingEnd="@dimen/activity_horizontal_margin"
             android:paddingBottom="8dp"
             android:text="Judul"
+            android:ellipsize="end"
             android:textColor="@android:color/white"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
