--- a/app/src/main/res/layout/activity_all_forums.xml
+++ b/app/src/main/res/layout/activity_all_forums.xml
@@ -29,6 +29,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <View
+            android:id="@+id/backBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/back_btn_background"
+            app:layout_constraintTop_toTopOf="@id/title"
+            app:layout_constraintStart_toStartOf="@id/toolBar"
+            app:layout_constraintBottom_toBottomOf="@id/title"
+            android:layout_marginStart="@dimen/activity_horizontal_margin" />
+
+        <View
+            android:layout_width="20dp"
+            android:layout_height="24dp"
+            android:background="@drawable/ic_arrow_back_purple_dark"
+            app:layout_constraintTop_toTopOf="@id/backBtn"
+            app:layout_constraintStart_toStartOf="@id/backBtn"
+            app:layout_constraintEnd_toEndOf="@id/backBtn"
+            app:layout_constraintBottom_toBottomOf="@id/backBtn" />
+
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
