--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
         <LinearLayout
             android:id="@+id/linear1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="32dp"
@@ -57,52 +57,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolBar">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/firasans"
-                android:text="Email"
-                android:textColor="@color/purpleDark"
-                android:textSize="12sp" />
-
-
-            <EditText
-                android:id="@+id/email"
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/purpleDark"
-                android:drawableEnd="@drawable/ic_person_purple_dark"
-                android:fontFamily="@font/firasans"
-                android:inputType="textEmailAddress"
-                android:paddingStart="8dp"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                app:tabGravity="fill"
+                app:tabIndicatorColor="@color/colorAccent"
+                app:tabMode="fixed"
+                app:tabTextColor="@color/purpleDark" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/firasans"
-                android:text="Password"
-                android:textColor="@color/purpleDark"
-                android:textSize="12sp" />
-
-
-            <EditText
-                android:id="@+id/password"
+            <androidx.viewpager.widget.ViewPager
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purpleDark"
-                android:drawableEnd="@drawable/ic_lock_purple_dark"
-                android:fontFamily="@font/firasans"
-                android:inputType="textPassword"
-                android:paddingStart="8dp"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:id="@+id/viewPager" />
         </LinearLayout>
 
         <View
