--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingBottom="100dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
@@ -43,7 +44,7 @@
         <LinearLayout
             android:id="@+id/linear1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="550dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="32dp"
@@ -57,100 +58,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolBar">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/firasans"
-                android:text="Nama"
-                android:textColor="@color/purpleDark"
-                android:textSize="12sp" />
-
-
-            <EditText
-                android:id="@+id/name"
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/purpleDark"
-                android:drawableEnd="@drawable/ic_person_purple_dark"
-                android:fontFamily="@font/firasans"
-                android:inputType="textEmailAddress"
-                android:paddingStart="8dp"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                app:tabGravity="fill"
+                app:tabIndicatorColor="@color/colorAccent"
+                app:tabMode="fixed"
+                app:tabTextColor="@color/purpleDark" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/firasans"
-                android:text="Email"
-                android:textColor="@color/purpleDark"
-                android:textSize="12sp" />
-
-
-            <EditText
-                android:id="@+id/email"
+            <androidx.viewpager.widget.ViewPager
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/purpleDark"
-                android:drawableEnd="@drawable/ic_email_purple_dark"
-                android:fontFamily="@font/firasans"
-                android:inputType="textEmailAddress"
-                android:paddingStart="8dp"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/firasans"
-                android:text="Password"
-                android:textColor="@color/purpleDark"
-                android:textSize="12sp" />
-
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:backgroundTint="@color/purpleDark"
-                android:drawableEnd="@drawable/ic_lock_purple_dark"
-                android:fontFamily="@font/firasans"
-                android:inputType="textPassword"
-                android:paddingStart="8dp"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/firasans"
-                android:text="Re-Type"
-                android:textColor="@color/purpleDark"
-                android:textSize="12sp" />
-
-
-            <EditText
-                android:id="@+id/reTypePass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/purpleDark"
-                android:drawableEnd="@drawable/ic_lock_purple_dark"
-                android:fontFamily="@font/firasans"
-                android:inputType="textPassword"
-                android:paddingStart="8dp"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:id="@+id/viewPager" />
         </LinearLayout>
 
         <View
@@ -173,19 +94,6 @@
             app:layout_constraintEnd_toEndOf="@id/btnRegister"
             app:layout_constraintTop_toTopOf="@id/btnRegister"
             app:layout_constraintBottom_toBottomOf="@id/btnRegister" />
-
-        <TextView
-            android:id="@+id/forgotPass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/btnRegister"
-            app:layout_constraintTop_toBottomOf="@id/btnRegister"
-            app:layout_constraintEnd_toEndOf="@id/btnRegister"
-            android:text="Lupa Password ?"
-            android:textColor="@color/purpleDark"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:textSize="16sp"
-            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/haveAccount"
